--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -8,6 +8,7 @@
     tools:context=".view.main.UserActivity">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/userActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
